--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     </script>
   </head>
   <body>
+    <video id="video-background" autoplay loop muted playsinline>
+    <source src="modules/backgrounds/test.mp4" type="video/mp4">
+    您的瀏覽器不支援影片播放。
+  </video>
+
     <div class="region fullscreen below"><div class="container"></div></div>
     <div class="region top bar">
       <div class="container"></div>
