抓到溫度了

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
   </head>
   <body>
-    <video id="video-background" autoplay loop muted playsinline>
+    <video id="video-background" autoplay muted playsinline>
     <source src="modules/backgrounds/craker.mp4" type="video/mp4">
     您的瀏覽器不支援影片播放。
   </video>
