new page tried& working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta name="mobile-web-app-capable" content="yes" />
 
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+  
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <!-- Materialize CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/roboto.css" />
     <link rel="stylesheet" type="text/css" href="node_modules/animate.css/animate.min.css" />
     <!-- custom.css is loaded by the loader.js to make sure it's loaded after the module css files. -->
@@ -63,5 +66,9 @@
     <script type="text/javascript" src="js/animateCSS.js"></script>
     <script type="text/javascript" src="js/positions.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    
+    <!-- Materialize JS（放在 body 最底部） -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    
   </body>
 </html>
